--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 		<div class="container-lecturers">
 			<!-- Titles -->
-			<div class="right-title">
+			<div class="lecturers-title">
 				<p>הנושאים הכי עדכניים בהרצאות קצרות ומעניינות</p>
 			</div>
 
