responsive start commit

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+	<meta name="viewport" content="width=device-width">
 </head>
 <body>
 
@@ -19,7 +20,7 @@
 			
 			<!-- Navigation -->
 			<nav>
-				<ul class"nav-list">
+				<ul class="nav-list">
 					<li class="nav-item">
 						<i class="fa fa-star" aria-hidden="true"></i>
 						<a href="#lectures">הרצאות</a>
@@ -29,6 +30,9 @@
 					<li class="nav-item"><a href="#info">מידע נוסף</a></li>
 				</ul>
 			</nav>
+
+			<i class="fa fa-bars" aria-hidden="true"></i>
+
 		</div>
 
 	</header>
@@ -328,6 +332,7 @@
 
 		<!-- links -->
 		<div class="footer-links">
+			
 			<p>
 				<span>כל הזכויות שמורות לנטקראפט © 2016 &nbsp;&nbsp;</span> |
 				<span>&nbsp;&nbsp;תרימו טלפון: 050-838-5569&nbsp;&nbsp;</span> |
@@ -337,6 +342,7 @@
 
 			<!-- logo -->
 			<a id="footer-logo" href="http://netcraft.co.il/" target="blank"><img src="http://netcraft.co.il/devshots/img/netcraft-logo.png"></a>
+		
 		</div>
 
 	</footer>
