pre Code review

--- a/index.html
+++ b/index.html
@@ -238,11 +238,14 @@
 			<p>אבן גבירול 71 תל אביב</p>
 			<hr>
 			<dl id="details-list">
-				<dt>מתכנסים<br>בשעה:</dt>
-				<dd>18:30</dd>
-
-				<dt>הרצאה<br>ראשונה:</dt>
-				<dd>19:00</dd>
+				<div class="details-list-item">
+					<dt>מתכנסים<br>בשעה:</dt>
+					<dd>18:30</dd>					
+				</div>
+				<div class="details-list-item">
+					<dt>הרצאה<br>ראשונה:</dt>
+					<dd>19:00</dd>					
+				</div>
 			</dl>
 			<hr>
 			<h4>חניה</h4>
